chore: Made of some code seen in tweets about JDK 16 and JDK 17